--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -22,6 +22,7 @@ body{
 
     transform-style: preserve-3d;
     transition: transform .5s;
+    cursor: pointer;
 }
 
 .card_back, .card_front{
@@ -72,6 +73,12 @@ body{
     border: none;
     border-radius: 1rem;
     margin-top: 10px;
+    cursor: pointer;
+    transition: all ease-in-out .5s;
+}
+
+#restart:hover{
+    box-shadow: 0px 0px 10px yellow;
 }
 
 #gameBoard{
@@ -79,4 +86,20 @@ body{
     display: grid;
     grid-template: 1fr 1fr 1fr 1fr / 1fr 1fr 1fr 1fr 1fr;
     gap: 40px;
+}
+
+@media screen and (max-width: 670px){
+
+    #gameBoard{
+        background-color: blueviolet;
+        max-width: 90vw;
+        display: grid;
+        grid-template: 1fr 1fr 1fr 1fr 1fr / 1fr 1fr 1fr 1fr;
+        gap: 30px;
+    }
+
+    .card{
+        width: 4rem;
+        height: 4rem;
+    }
 }
